# ukkelit

./: .clang-format  CMakeLists.txt  Ukkelit.sln  Ukkelit.vcxproj  Ukkelit.vcxproj.filters
src/client/: ClientState.h
src/common/: Ability.cpp  Ability.h  Action.h  ActionEffect.cpp  ActionEffect.h  ActionRequest.cpp  ActionRequest.h  ActionType.h  ClientMessages.h  CommonTypes.h  GameState.cpp  GameState.h  Hero.cpp  Hero.h  MockNetwork.h  Player.cpp  Player.h  ServerCommunication.cpp  ServerCommunication.h  ServerMessages.h  Translations.cpp  Translations.h  _ver.h
src/game/: GameLogic.cpp  GameLogic.h
src/server/: ClientCommunication.cpp  ClientCommunication.h  ServerState.h
src/ui_console/: ConnectRandomGameUi.cpp  ConsoleOutput.cpp  ConsoleOutput.h  FirstTimeUi.cpp  GameUi.cpp  HelpUi.cpp  Main.cpp  Main.h  MainMenuUi.cpp  StartupUi.cpp  UserInterface.h  entry.cpp
